--- a/ProyectoFinalKermesse/Views/Gestion/Index.cshtml
+++ b/ProyectoFinalKermesse/Views/Gestion/Index.cshtml
@@ -58,6 +58,7 @@
                             <p> @Html.ActionLink("Detalle de Tasa de Cambio", "Index", "TasaCambioDets", new { area = "" }, new { @style = "color: #779FA1" })</p>
                             <p> @Html.ActionLink("Monedas", "Index", "Monedas", new { area = "" }, new { @style = "color: #779FA1" })</p>
                             <p> @Html.ActionLink("Categoría de Gastos", "Index", "CategoriaGastoes", new { area = "" }, new { @style = "color: #779FA1" })</p>
+                            <p>@Html.ActionLink("Control de Bonos", "Index", "ControlBonoes", new { area = "" }, new { @style = "color: #779FA1" })</p>
 
                         </div>
                     </div>
@@ -97,6 +98,7 @@
 
                             <p> @Html.ActionLink("Kermesse", "Index", "Kermesses", new { area = "" }, new { @style = "color: #779FA1" })</p>
                             <p>@Html.ActionLink("Parroquias", "Index", "Parroquias", new { area = "" }, new { @style = "color: #779FA1" })</p>
+                            <p>@Html.ActionLink("Comunidad", "Index", "Comunidads", new { area = "" }, new { @style = "color: #779FA1" })</p>
 
                         </div>
                     </div>
@@ -116,7 +118,7 @@
                             <p>@Html.ActionLink("Gastos", "Index", "Gastoes", new { area = "" }, new { @style = "color: #779FA1" })</p>
                             <p>@Html.ActionLink("Ingreso de comunidad", "Index", "IngresoComunidads", new { area = "" }, new { @style = "color: #779FA1" })</p>
                             <p>@Html.ActionLink("Detalle de Ingreso de comunidad", "Index", "IngresoComunidadDets", new { area = "" }, new { @style = "color: #779FA1" })</p>
-                           
+                            <p>@Html.ActionLink("Arqueo de Caja", "Index", "ArqueoCajas", new { area = "" }, new { @style = "color: #779FA1" })</p>
 
 
                         </div>
@@ -135,6 +137,7 @@
                             <p> En esta sección se encuentran todas las tablas relacionadas con la gestión de usuarios </p>
                             <p>@Html.ActionLink("Usuarios", "Index", "Usuarios", new { area = "" }, new { @style = "color: #779FA1" })</p>
                             <p>@Html.ActionLink("Opciones", "Index", "Opcions", new { area = "" }, new { @style = "color: #779FA1" })</p>
+                            <p>@Html.ActionLink("Rol", "Index", "Rols", new { area = "" }, new { @style = "color: #779FA1" })</p>
                             <p>@Html.ActionLink("Rol Opcion", "Index", "RolOpcions", new { area = "" }, new { @style = "color: #779FA1" })</p>
                             <p>@Html.ActionLink("Rol Usuarios", "Index", "RolUsuarios", new { area = "" }, new { @style = "color: #779FA1" })</p>
 
