--- a/ProyectoFinalKermesse/Views/Rols/Index.cshtml
+++ b/ProyectoFinalKermesse/Views/Rols/Index.cshtml
@@ -1,40 +1,58 @@
 ﻿@model IEnumerable<ProyectoFinalKermesse.Models.Rol>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Rol";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+<div>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.rolDescripcion)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.estado)
-        </th>
-        <th></th>
-    </tr>
+    <ol class="breadcrumb" style="background:none; font-size: 18px">
+        <li><a href="#">  @Html.ActionLink("Inicio", "Index", "Home", new { area = "" }, new { @style = "color: #779FA1" })  </a></li>
+        <li><a href="#">  @Html.ActionLink("Gestiones", "Index", "Gestion", new { area = "" }, new { @style = "color: #779FA1" })  </a></li>
+        <li class="active"><a href="#">  @Html.ActionLink("Rol", "Index", "Rols", new { area = "" }, new { @style = "color: #779FA1" })  </a></li>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.rolDescripcion)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.estado)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.idRol }) |
-            @Html.ActionLink("Details", "Details", new { id=item.idRol }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.idRol })
-        </td>
-    </tr>
-}
+    </ol>
+</div>
 
-</table>
+
+<div class="carousel-inner" role="listbox">
+    <div class="item active">
+        <img src="~/fonts/BannersKermesse/24.png" alt="Banner 6">
+
+    </div>
+
+</div>
+
+<div class="container">
+    <table class="table">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.rolDescripcion)
+            </th>
+            @*<th>
+                @Html.DisplayNameFor(model => model.estado)
+            </th>*@
+            <th></th>
+        </tr>
+
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.rolDescripcion)
+                </td>
+                @*<td>
+                    @Html.DisplayFor(modelItem => item.estado)
+                </td>*@
+                <td>
+                    @Html.ActionLink("Editar", "Edit", new { id = item.idRol }, new { @style = "color: #779FA1" }) |
+                    @Html.ActionLink("Detalles", "Details", new { id = item.idRol }, new { @style = "color: #779FA1" }) |
+                    @Html.ActionLink("Eliminar", "Delete", new { id = item.idRol }, new { @style = "color: #779FA1" })
+                </td>
+            </tr>
+        }
+
+    </table>
+
+    </div> 
