Modificaciones en Controladores Producto y RolOpcion

--- a/ProyectoFinalKermesse/Views/Productoes/Index.cshtml
+++ b/ProyectoFinalKermesse/Views/Productoes/Index.cshtml
@@ -24,6 +24,17 @@
 </div>
 
 <div class="container">
+    <hr />
+    @using (Html.BeginForm())
+    {
+        <div class="container">
+            <p>
+                Buscar por Nombre: @Html.TextBox("valorBusq")
+                <input type="submit" value="Buscar" style="background-color: #779FA1; color: #FFFFFF; font-weight:bold" />
+            </p>
+        </div>
+
+    }
     <table class="table">
         <tr>
             <th>
@@ -39,8 +50,8 @@
                 @Html.DisplayNameFor(model => model.precioVSugerido)
             </th>
             @*<th>
-                @Html.DisplayNameFor(model => model.estado)
-            </th>*@
+                    @Html.DisplayNameFor(model => model.estado)
+                </th>*@
             <th>
                 @Html.DisplayNameFor(model => model.CategoriaProducto.nombre)
             </th>
@@ -66,8 +77,8 @@
                     @Html.DisplayFor(modelItem => item.precioVSugerido)
                 </td>
                 @*<td>
-                    @Html.DisplayFor(modelItem => item.estado)
-                </td>*@
+                        @Html.DisplayFor(modelItem => item.estado)
+                    </td>*@
                 <td>
                     @Html.DisplayFor(modelItem => item.CategoriaProducto.nombre)
                 </td>
@@ -89,7 +100,7 @@
                         <span class="glyphicon glyphicon-trash" aria-hidden="true" style="color: #779FA1"></span>
                         @Html.ActionLink("Delete", "Delete", new { id = item.idProducto }, new { @style = "color: #779FA1;" })
                     </button>
-                    
+
                 </td>
             </tr>
         }
