--- a/ProyectoFinalKermesse/Views/RolOpcions/Index.cshtml
+++ b/ProyectoFinalKermesse/Views/RolOpcions/Index.cshtml
@@ -27,6 +27,17 @@
 
 
 <div class="container">
+    <hr />
+    @using (Html.BeginForm())
+    {
+        <div class="container">
+            <p>
+                Buscar por Nombre: @Html.TextBox("valorBusq")
+                <input type="submit" value="Buscar" style="background-color: #779FA1; color: #FFFFFF; font-weight:bold" />
+            </p>
+        </div>
+
+    }
     <table class="table">
         <tr>
             <th>
@@ -79,4 +90,4 @@
             <span class="glyphicon glyphicon-plus" aria-hidden="true" style="float: left;  color: white"></span>
         </button>
     </p>
-    </div> 
+</div> 
