--- a/ProyectoFinalKermesse/Reportes/RptComunidadDetalle.rdlc
+++ b/ProyectoFinalKermesse/Reportes/RptComunidadDetalle.rdlc
@@ -6,29 +6,29 @@
         <TablixBody>
           <TablixColumns>
             <TablixColumn>
-              <Width>7.77844cm</Width>
+              <Width>7.35699cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>7.77844cm</Width>
+              <Width>7.35699cm</Width>
             </TablixColumn>
           </TablixColumns>
           <TablixRows>
             <TablixRow>
-              <Height>0.84043cm</Height>
+              <Height>1.06302cm</Height>
               <TablixCells>
                 <TablixCell>
                   <CellContents>
-                    <Textbox Name="Textbox2">
+                    <Textbox Name="Textbox8">
                       <CanGrow>true</CanGrow>
                       <KeepTogether>true</KeepTogether>
                       <Paragraphs>
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>ID</Value>
+                              <Value>Nombre</Value>
                               <Style>
                                 <FontFamily>Roboto</FontFamily>
-                                <FontSize>16pt</FontSize>
+                                <FontSize>18pt</FontSize>
                                 <FontWeight>Bold</FontWeight>
                               </Style>
                             </TextRun>
@@ -36,7 +36,7 @@
                           <Style />
                         </Paragraph>
                       </Paragraphs>
-                      <rd:DefaultName>Textbox2</rd:DefaultName>
+                      <rd:DefaultName>Textbox8</rd:DefaultName>
                       <Style>
                         <Border>
                           <Color>LightGrey</Color>
@@ -52,17 +52,17 @@
                 </TablixCell>
                 <TablixCell>
                   <CellContents>
-                    <Textbox Name="idProducto">
+                    <Textbox Name="idComunidad">
                       <CanGrow>true</CanGrow>
                       <KeepTogether>true</KeepTogether>
                       <Paragraphs>
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>=Fields!idProducto.Value</Value>
+                              <Value>=Fields!idComunidad.Value</Value>
                               <Style>
                                 <FontFamily>Roboto</FontFamily>
-                                <FontSize>16pt</FontSize>
+                                <FontSize>18pt</FontSize>
                               </Style>
                             </TextRun>
                           </TextRuns>
@@ -71,7 +71,7 @@
                           </Style>
                         </Paragraph>
                       </Paragraphs>
-                      <rd:DefaultName>idProducto</rd:DefaultName>
+                      <rd:DefaultName>idComunidad</rd:DefaultName>
                       <Style>
                         <Border>
                           <Color>LightGrey</Color>
@@ -88,21 +88,21 @@
               </TablixCells>
             </TablixRow>
             <TablixRow>
-              <Height>0.84043cm</Height>
+              <Height>1.06302cm</Height>
               <TablixCells>
                 <TablixCell>
                   <CellContents>
-                    <Textbox Name="Textbox8">
+                    <Textbox Name="Textbox2">
                       <CanGrow>true</CanGrow>
                       <KeepTogether>true</KeepTogether>
                       <Paragraphs>
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>Nombre</Value>
+                              <Value>ID</Value>
                               <Style>
                                 <FontFamily>Roboto</FontFamily>
-                                <FontSize>16pt</FontSize>
+                                <FontSize>18pt</FontSize>
                                 <FontWeight>Bold</FontWeight>
                               </Style>
                             </TextRun>
@@ -110,7 +110,7 @@
                           <Style />
                         </Paragraph>
                       </Paragraphs>
-                      <rd:DefaultName>Textbox8</rd:DefaultName>
+                      <rd:DefaultName>Textbox2</rd:DefaultName>
                       <Style>
                         <Border>
                           <Color>LightGrey</Color>
@@ -136,7 +136,7 @@
                               <Value>=Fields!nombre.Value</Value>
                               <Style>
                                 <FontFamily>Roboto</FontFamily>
-                                <FontSize>16pt</FontSize>
+                                <FontSize>18pt</FontSize>
                               </Style>
                             </TextRun>
                           </TextRuns>
@@ -162,7 +162,7 @@
               </TablixCells>
             </TablixRow>
             <TablixRow>
-              <Height>0.84043cm</Height>
+              <Height>1.06302cm</Height>
               <TablixCells>
                 <TablixCell>
                   <CellContents>
@@ -173,10 +173,10 @@
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>Descripción</Value>
+                              <Value>Responsable</Value>
                               <Style>
                                 <FontFamily>Roboto</FontFamily>
-                                <FontSize>16pt</FontSize>
+                                <FontSize>18pt</FontSize>
                                 <FontWeight>Bold</FontWeight>
                               </Style>
                             </TextRun>
@@ -200,17 +200,17 @@
                 </TablixCell>
                 <TablixCell>
                   <CellContents>
-                    <Textbox Name="descripcion">
+                    <Textbox Name="responsble">
                       <CanGrow>true</CanGrow>
                       <KeepTogether>true</KeepTogether>
                       <Paragraphs>
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>=Fields!descripcion.Value</Value>
+                              <Value>=Fields!responsble.Value</Value>
                               <Style>
                                 <FontFamily>Roboto</FontFamily>
-                                <FontSize>16pt</FontSize>
+                                <FontSize>18pt</FontSize>
                               </Style>
                             </TextRun>
                           </TextRuns>
@@ -219,7 +219,7 @@
                           </Style>
                         </Paragraph>
                       </Paragraphs>
-                      <rd:DefaultName>descripcion</rd:DefaultName>
+                      <rd:DefaultName>responsble</rd:DefaultName>
                       <Style>
                         <Border>
                           <Color>LightGrey</Color>
@@ -236,7 +236,7 @@
               </TablixCells>
             </TablixRow>
             <TablixRow>
-              <Height>0.84043cm</Height>
+              <Height>1.06302cm</Height>
               <TablixCells>
                 <TablixCell>
                   <CellContents>
@@ -247,10 +247,10 @@
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>Cantidad</Value>
+                              <Value>Descr Contribución</Value>
                               <Style>
                                 <FontFamily>Roboto</FontFamily>
-                                <FontSize>16pt</FontSize>
+                                <FontSize>18pt</FontSize>
                                 <FontWeight>Bold</FontWeight>
                               </Style>
                             </TextRun>
@@ -274,17 +274,17 @@
                 </TablixCell>
                 <TablixCell>
                   <CellContents>
-                    <Textbox Name="cantidad">
+                    <Textbox Name="descContribucion">
                       <CanGrow>true</CanGrow>
                       <KeepTogether>true</KeepTogether>
                       <Paragraphs>
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>=Fields!cantidad.Value</Value>
+                              <Value>=Fields!descContribucion.Value</Value>
                               <Style>
                                 <FontFamily>Roboto</FontFamily>
-                                <FontSize>16pt</FontSize>
+                                <FontSize>18pt</FontSize>
                               </Style>
                             </TextRun>
                           </TextRuns>
@@ -293,81 +293,7 @@
                           </Style>
                         </Paragraph>
                       </Paragraphs>
-                      <rd:DefaultName>cantidad</rd:DefaultName>
-                      <Style>
-                        <Border>
-                          <Color>LightGrey</Color>
-                          <Style>Solid</Style>
-                        </Border>
-                        <PaddingLeft>2pt</PaddingLeft>
-                        <PaddingRight>2pt</PaddingRight>
-                        <PaddingTop>2pt</PaddingTop>
-                        <PaddingBottom>2pt</PaddingBottom>
-                      </Style>
-                    </Textbox>
-                  </CellContents>
-                </TablixCell>
-              </TablixCells>
-            </TablixRow>
-            <TablixRow>
-              <Height>0.84043cm</Height>
-              <TablixCells>
-                <TablixCell>
-                  <CellContents>
-                    <Textbox Name="Textbox16">
-                      <CanGrow>true</CanGrow>
-                      <KeepTogether>true</KeepTogether>
-                      <Paragraphs>
-                        <Paragraph>
-                          <TextRuns>
-                            <TextRun>
-                              <Value>Precio sugerido</Value>
-                              <Style>
-                                <FontFamily>Roboto</FontFamily>
-                                <FontSize>16pt</FontSize>
-                                <FontWeight>Bold</FontWeight>
-                              </Style>
-                            </TextRun>
-                          </TextRuns>
-                          <Style />
-                        </Paragraph>
-                      </Paragraphs>
-                      <rd:DefaultName>Textbox16</rd:DefaultName>
-                      <Style>
-                        <Border>
-                          <Color>LightGrey</Color>
-                          <Style>Solid</Style>
-                        </Border>
-                        <PaddingLeft>2pt</PaddingLeft>
-                        <PaddingRight>2pt</PaddingRight>
-                        <PaddingTop>2pt</PaddingTop>
-                        <PaddingBottom>2pt</PaddingBottom>
-                      </Style>
-                    </Textbox>
-                  </CellContents>
-                </TablixCell>
-                <TablixCell>
-                  <CellContents>
-                    <Textbox Name="precioVSugerido">
-                      <CanGrow>true</CanGrow>
-                      <KeepTogether>true</KeepTogether>
-                      <Paragraphs>
-                        <Paragraph>
-                          <TextRuns>
-                            <TextRun>
-                              <Value>=Fields!precioVSugerido.Value</Value>
-                              <Style>
-                                <FontFamily>Roboto</FontFamily>
-                                <FontSize>16pt</FontSize>
-                              </Style>
-                            </TextRun>
-                          </TextRuns>
-                          <Style>
-                            <TextAlign>Right</TextAlign>
-                          </Style>
-                        </Paragraph>
-                      </Paragraphs>
-                      <rd:DefaultName>precioVSugerido</rd:DefaultName>
+                      <rd:DefaultName>descContribucion</rd:DefaultName>
                       <Style>
                         <Border>
                           <Color>LightGrey</Color>
@@ -400,16 +326,15 @@
                 <TablixMember />
                 <TablixMember />
                 <TablixMember />
-                <TablixMember />
               </TablixMembers>
             </TablixMember>
           </TablixMembers>
         </TablixRowHierarchy>
-        <DataSetName>DsProducto</DataSetName>
-        <Top>0.70146cm</Top>
-        <Left>1.45745cm</Left>
-        <Height>4.20215cm</Height>
-        <Width>15.55687cm</Width>
+        <DataSetName>DsComunidad</DataSetName>
+        <Top>0.3575cm</Top>
+        <Left>1.37266cm</Left>
+        <Height>4.25208cm</Height>
+        <Width>14.71399cm</Width>
         <Style>
           <Border>
             <Style>None</Style>
@@ -435,7 +360,7 @@
                 <Paragraph>
                   <TextRuns>
                     <TextRun>
-                      <Value>Lista de Producto</Value>
+                      <Value>Lista de Comunidad</Value>
                       <Style>
                         <FontFamily>Roboto</FontFamily>
                         <FontSize>20pt</FontSize>
@@ -651,41 +576,37 @@
         <DataProvider>System.Data.DataSet</DataProvider>
         <ConnectString>/* Local Connection */</ConnectString>
       </ConnectionProperties>
-      <rd:DataSourceID>7cb5cf9f-24e1-4ca0-a028-8f570b9d4933</rd:DataSourceID>
+      <rd:DataSourceID>66722b81-8b6c-4639-93be-a3682ab29c7f</rd:DataSourceID>
     </DataSource>
   </DataSources>
   <DataSets>
-    <DataSet Name="DsProducto">
+    <DataSet Name="DsComunidad">
       <Query>
         <DataSourceName>DsReportes</DataSourceName>
         <CommandText>/* Local Query */</CommandText>
       </Query>
       <Fields>
-        <Field Name="idProducto">
-          <DataField>idProducto</DataField>
+        <Field Name="idComunidad">
+          <DataField>idComunidad</DataField>
           <rd:TypeName>System.Int16</rd:TypeName>
         </Field>
         <Field Name="nombre">
           <DataField>nombre</DataField>
           <rd:TypeName>System.String</rd:TypeName>
         </Field>
-        <Field Name="descripcion">
-          <DataField>descripcion</DataField>
+        <Field Name="responsble">
+          <DataField>responsble</DataField>
           <rd:TypeName>System.String</rd:TypeName>
         </Field>
-        <Field Name="cantidad">
-          <DataField>cantidad</DataField>
-          <rd:TypeName>System.Int16</rd:TypeName>
-        </Field>
-        <Field Name="precioVSugerido">
-          <DataField>precioVSugerido</DataField>
-          <rd:TypeName>System.Double</rd:TypeName>
+        <Field Name="descContribucion">
+          <DataField>descContribucion</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
         </Field>
       </Fields>
       <rd:DataSetInfo>
         <rd:DataSetName>DsReportes</rd:DataSetName>
         <rd:SchemaPath>C:\Users\Admin\Downloads\ProyectoFinalKermesse-a49105e2218eb8005ce6c141ccfebd890e9050c9\ProyectoFinalKermesse\DataSet\DsReportes.xsd</rd:SchemaPath>
-        <rd:TableName>Producto </rd:TableName>
+        <rd:TableName>Comunidad</rd:TableName>
         <rd:TableAdapterFillMethod />
         <rd:TableAdapterGetDataMethod />
         <rd:TableAdapterName />
