--- a/ProyectoFinalKermesse/Views/Comunidads/Index.cshtml
+++ b/ProyectoFinalKermesse/Views/Comunidads/Index.cshtml
@@ -24,6 +24,31 @@
 </div>
 
 <div class="container">
+
+    <hr />
+    @using (Html.BeginForm())
+    {
+<div class="container">
+    <p>
+        Buscar por nombre: @Html.TextBox("valorBusq")
+        <input type="submit" value="Buscar" style="background-color: #779FA1; color: #FFFFFF; font-weight:bold" />
+    </p>
+</div>}
+    <div class="dropdown" style=" left: 1000px">
+        <button class="btn btn-default dropdown-toggle" style="background-color: #779FA1; color: #FFFFFF; font-weight:bold" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+            <span class="glyphicon glyphicon-download-alt" aria-hidden="true" style="float: left;  color: white"></span>
+            &nbsp;
+            Exportar a
+            <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+            <li><a href="#">@Html.ActionLink("Exportar a PDF", "VerReporteComunidad", new { tipo = "PDF", valorBusq = Request.Form["ValorBusq"] })</a></li>
+            <li><a href="#">@Html.ActionLink("Exportar a Excel", "VerReporteComunidad", new { tipo = "Excel", valorBusq = Request.Form["ValorBusq"] })</a></li>
+            <li><a href="#">@Html.ActionLink("Exportar a Word", "VerReporteComunidad", new { tipo = "Word", valorBusq = Request.Form["ValorBusq"] })</a></li>
+
+        </ul>
+    </div>
+    <hr />
     <table class="table">
         <tr>
             <th>
@@ -58,11 +83,16 @@
                     </td>*@
 
 
-                <td>
-                    @Html.ActionLink("Editar", "Edit", new { id = item.idComunidad }, new { @style = "color: #779FA1" })
-                    @Html.ActionLink("Detalles", "Details", new { id = item.idComunidad }, new { @style = "color: #779FA1" })
-                    @Html.ActionLink("Eliminar", "Delete", new { id = item.idComunidad }, new { @style = "color: #779FA1" })
-                </td>
+            <td>
+                @Html.ActionLink("Editar", "Edit", new { id = item.idComunidad }, new { @style = "color: #779FA1" })
+                <span class="glyphicon glyphicon-edit" aria-hidden="true" style="float: left; color: #779FA1"></span>|
+                <span class="glyphicon glyphicon-list-alt" aria-hidden="true" style="color: #779FA1"></span>
+                @Html.ActionLink("Detalles", "Details", new { id = item.idComunidad }, new { @style = "color: #779FA1" }) |
+                <span class="glyphicon glyphicon-trash" aria-hidden="true" style="color: #779FA1"></span>
+                @Html.ActionLink("Eliminar", "Delete", new { id = item.idComunidad }, new { @style = "color: #779FA1" }) |
+                <span class="glyphicon glyphicon-file" aria-hidden="true" style="color: #779FA1"></span>
+                @Html.ActionLink("Ver Reporte", "VerReporteComunidadDetalle", new { id = item.idComunidad }, new { @style = "color: #779FA1" })
+            </td>
             </tr>
         }
 
